# snre

./: .bandit  .gitignore  .pre-commit-config.yaml  API_SPEC.md  Dockerfile  LICENSE.md  Makefile  NOTICE.md  README.md  architecture.md  contracts.py  docker-compose.yml  fix_console_script.py  fix_quality_issues.py  main.py  pyproject.toml  refactored.py  requirements.txt  ruff.toml  setup.py  snre_cli.py  snre_direct.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  loop_simplifier.py  pattern_optimizer.py  security_enforcer.py
config/: agent_profiles.yaml  settings.yaml
core/: __init__.py  change_tracker.py  consensus_engine.py  evolution_recorder.py  swarm_coordinator.py
docs/: architecture.md
examples/: sample_refactor.py
interface/: __init__.py  api.py  cli.py  integration_hook.py
scripts/: check_contract.py  fix_ci.py
snre/: __init__.py  __main__.py  di.py  errors.py
snre/adapters/: __init__.py  git_hook.py  parser.py  repository.py
snre/agents/: __init__.py  base.py  protocol.py  registry.py
snre/core/: __init__.py  consensus.py  coordinator.py  recorder.py  tracker.py
snre/models/: __init__.py  changes.py  config.py  enums.py  profiles.py  session.py
snre/ports/: __init__.py  api.py  cli.py
tests/: __init__.py
tests/unit_tests/: test_contracts.py  test_functional.py  test_working_components.py
